--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,7 +21,7 @@
     <ion-card-header primary (click)="itemTapped($event, janela)">{{janela.title}}</ion-card-header>
     <!-- <ion-card-content class="colorparag" (click)="itemTapped($event, janela)">{{janela.Result[0].mensagem}}</ion-card-content> -->
     <ion-card-content class="colorparag" (click)="itemTapped($event, janela)">
-      {{janela.fase}}: {{janela.idAmbiente}} 
+      {{janela.fase}}
       <p>{{janela.Result}}</p>
     </ion-card-content>
 
