--- a/src/pages/addAmbiente/addAmbiente.html
+++ b/src/pages/addAmbiente/addAmbiente.html
@@ -5,7 +5,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content>   
 
   <ion-list>
 
@@ -15,20 +15,18 @@
     </ion-item>
 
     <ion-item>
-      <ion-label floating>Produção</ion-label>
-      <ion-input type="text" [(ngModel)]="ambiente.producao"></ion-input>
+      <ion-label floating>Endereço API Rest</ion-label>
+      <ion-input type="text" [(ngModel)]="ambiente.endereco"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label floating>Pré-Produção</ion-label>
-      <ion-input type="text" [(ngModel)]="ambiente.preprod"></ion-input>
+      <ion-label floating>Fase</ion-label>
+      <ion-select [(ngModel)]="ambiente.fase" cancelText="Cancelar" okText="Salvar">
+        <ion-option value="Homologação">Homologação</ion-option>
+        <ion-option value="Pré-Produção">Pré-Produção</ion-option>
+        <ion-option value="Produção">Produção</ion-option>
+      </ion-select>
     </ion-item>
-
-    <ion-item>
-      <ion-label floating>Homologação</ion-label>
-      <ion-input type="text" [(ngModel)]="ambiente.homolog"></ion-input>
-    </ion-item>
-  
 
   </ion-list>
 
