--- a/src/pages/addAviso/addAviso.html
+++ b/src/pages/addAviso/addAviso.html
@@ -22,8 +22,8 @@
   </ion-list>
 
   <div align="middle">
-    <button ion-button (click)="saveJanela()">Salvar</button>
-    <button ion-button *ngIf='aviso._id' (click)="deleteJanela()">Excluir</button>
+    <button ion-button (click)="saveAviso()">Salvar</button>
+    <button ion-button *ngIf='aviso._id' (click)="deleteAviso()">Excluir</button>
   </div>
   
 </ion-content>
