--- a/src/pages/addEmpresa/addEmpresa.html
+++ b/src/pages/addEmpresa/addEmpresa.html
@@ -28,8 +28,8 @@
   </ion-list>
 
   <div align="middle">
-    <button ion-button (click)="saveJanela()">Salvar</button>
-    <button ion-button *ngIf='empresa._id' (click)="deleteJanela()">Excluir</button>
+    <button ion-button (click)="saveEmpresa()">Salvar</button>
+    <button ion-button *ngIf='empresa._id' (click)="deleteEmpresa()">Excluir</button>
   </div>
   
 </ion-content>
