--- a/src/pages/addProduto/addProduto.html
+++ b/src/pages/addProduto/addProduto.html
@@ -17,8 +17,8 @@
   </ion-list>
 
   <div align="middle">
-    <button ion-button (click)="saveJanela()">Salvar</button>
-    <button ion-button *ngIf='produto._id' (click)="deleteJanela()">Excluir</button>
+    <button ion-button (click)="saveProduto()">Salvar</button>
+    <button ion-button *ngIf='produto._id' (click)="deleteProduto()">Excluir</button>
   </div>
   
 </ion-content>
