--- a/src/pages/produto/produto.html
+++ b/src/pages/produto/produto.html
@@ -28,6 +28,10 @@
       <button ion-item (click)="itemEmpresas($event, produto)">
         <ion-icon name="podium" item-start></ion-icon>
         Empresas
+      </button>
+      <button ion-item (click)="editProduto($event, produto)">
+        <ion-icon name="create" item-start></ion-icon>
+        Editar
       </button> 
     </ion-list>
   </ion-card>
