--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -72,7 +72,7 @@
     </ion-item-divider>       
 
     <ion-label *ngFor="let result of tarefa.Result">
-      <ion-item no-lines>{{result.mensagem}}</ion-item>
+      <ion-item no-lines text-wrap>{{result.mensagem}}</ion-item>
     </ion-label>
 
   </ion-item-group>
@@ -107,7 +107,7 @@
     </ion-item-divider>
 
     <ion-label *ngFor="let result of tarefa.Result">
-      <ion-item no-lines>{{result.mensagem}}</ion-item>
+      <ion-item no-lines text-wrap>{{result.mensagem}}</ion-item>
     </ion-label>
   </ion-item-group>
 
