--- a/src/pages/tarefa/tarefa.html
+++ b/src/pages/tarefa/tarefa.html
@@ -33,31 +33,31 @@
 
     <ion-row>
       <ion-col>
-        <button ion-button icon-left clear small class="coloraguarde" (click)="startTarefa(tarefa)">
+        <button ion-button icon-left clear small color="primary" (click)="startTarefa(tarefa)">
           <ion-icon name="arrow-dropright"></ion-icon>
           <div>Iniciar</div>
         </button>
       </ion-col>
       <ion-col *ngIf='tarefa.status === "erro"'>
-        <button ion-button icon-left clear small class="colorerro" (click)="resultTarefa(tarefa)">
+        <button ion-button icon-left clear small color="danger" (click)="resultTarefa(tarefa)">
           <ion-icon name="close"></ion-icon>
           <div>Erro</div>
         </button>
       </ion-col>
       <ion-col *ngIf='tarefa.status === "ok"'>
-        <button ion-button icon-left clear small class="colorok" (click)="resultTarefa(tarefa)">
+        <button ion-button icon-left clear small color="favorite" (click)="resultTarefa(tarefa)">
           <ion-icon name="checkmark"></ion-icon>
           <div >Ok</div>
         </button>
       </ion-col>
       <ion-col *ngIf='tarefa.status === "executando"'>
-        <button ion-button icon-left clear small class="coloraguarde">
+        <button ion-button icon-left clear small color="primary">
           <ion-icon name="refresh"></ion-icon>
           <div >Executando</div>
         </button>
       </ion-col>
       <ion-col *ngIf='tarefa.status === "indisponivel"'>
-        <button ion-button icon-left clear small class="colorerro">
+        <button ion-button icon-left clear small color="danger">
           <ion-icon name="alert"></ion-icon>
           <div >Serviço indisponível</div>
         </button>
