--- a/src/pages/addTarefa/addTarefa.html
+++ b/src/pages/addTarefa/addTarefa.html
@@ -28,7 +28,7 @@
       <ion-label floating>Endereço do Arquivo</ion-label>
       <ion-input type="text" [(ngModel)]="tarefa.path"></ion-input>
     </ion-item>
-    <ion-item>
+    <ion-item *ngIf='tarefa.type === "arquivo"'>
       <ion-label floating>Arquivos</ion-label>
       <ion-select [(ngModel)]="tarefa.arquivo" cancelText="Cancelar" okText="Salvar">
         <ion-option *ngFor="let arquivo of arquivos" value="{{arquivo.title}}">{{arquivo.title}}</ion-option>
