--- a/src/pages/addAviso/addAviso.html
+++ b/src/pages/addAviso/addAviso.html
@@ -16,7 +16,7 @@
 
     <ion-item>
       <ion-label floating>Comentário</ion-label>
-      <ion-input type="text" [(ngModel)]="aviso.comentario"></ion-input>
+      <ion-textarea autosize [(ngModel)]="aviso.comentario"></ion-textarea>
     </ion-item>
 
   </ion-list>
